Bookmarker: Fix default button text color in dark mode

--- a/apps/bookmarker/assets/css/_forms.scss
+++ b/apps/bookmarker/assets/css/_forms.scss
@@ -6,3 +6,10 @@
 .form-group {
 	margin-bottom: 1rem;
 }
+
+@media (prefers-color-scheme: dark) {
+	.btn-default {
+		--bs-btn-color: #fff;
+		--bs-btn-hover-color: #000;
+	}
+}
